# podpull

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: pages.yml  release.yml
doc/adr/: 0002-project-structure-library-and-binary.md  0004-async-runtime-and-http-client.md  0005-rss-feed-parsing-approach.md  0006-data-serialization-strategy.md  0008-user-feedback-and-progress-display.md  0009-date-and-time-handling.md  0010-cli-output-styling-with-color-and-emoji-indicators.md  0011-progress-reporting-trait-abstraction.md  0012-http-client-trait-for-testability.md  0014-partial-download-protection.md  0016-episode-ordering-by-publication-date.md
docs/adr/: 0003-cli-framework-selection.md  0007-error-handling-strategy.md  0010-cli-output-styling-with-color-and-emoji-indicators.md  0013-library-public-api-design.md  0015-file-integrity-hashing.md
docs/pages/: CNAME  config.yaml  imprint.html  index.html  theme.css
docs/pages/assets/: demo.webm
docs/pages/sections/: demo.html  footer.html  hero.html  highlights.html  quick-start.html
docs/vhs/: .gitignore  README.md  demo.tape
src/: error.rs  http.rs  lib.rs  main.rs  progress.rs  state.rs  sync.rs
src/episode/: download.rs  filename.rs  mod.rs
src/feed/: fetch.rs  mod.rs  parse.rs
src/metadata/: episode.rs  mod.rs  podcast.rs
