[package]
name = "podpull"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1"
bytes = "1"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.56", features = ["derive"] }
futures = "0.3"
indicatif = "0.18.3"
reqwest = { version = "0.13.1", features = ["stream"] }
rss = "2.0.12"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "sync", "fs"] }
url = { version = "2.5.8", features = ["serde"] }
