[package]
name = "podpull"
version = "1.1.2"
edition = "2024"
authors = ["Jakob Westhoff <jakob@westhoffswelt.de>"]
license = "MPL-2.0"
description = "A fast, minimal CLI tool for downloading and synchronizing podcasts from RSS feeds"
repository = "https://github.com/jakobwesthoff/podpull"
keywords = ["podcast", "rss", "download", "sync", "backup"]
categories = ["command-line-utilities", "multimedia"]

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1"
bytes = "1"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.56", features = ["derive"] }
colored = "3.1.1"
console = "0.16.2"
futures = "0.3"
html-escape = "0.2.13"
indicatif = "0.18.3"
reqwest = { version = "0.13.1", features = ["stream"] }
rss = "2.0.12"
sanitize-filename = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "fs",
] }
url = { version = "2.5.8", features = ["serde"] }

[dev-dependencies]
tempfile = "3.24.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
